--- a/index.html
+++ b/index.html
@@ -4,13 +4,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
+    
 </head>
 <body>
-    New York News
-    <h1> DAILY NEWS</h1>
-    <h1>Abdoul is the new american president<h1>
-    <textarea name="" id="" cols="30" rows="10"></textarea>
+    <h1 class="text-primary">TheGreatSavage</h1>
+    <h1> The animals</h1>
+    <p>
+        Here we will put some animals that maybe you are intrested of:
+    </p>
+
+    <h1><a href="dog.html"> Dogs </a></h1> <h1><a href="cat.html"> Cats </a></h1>
+    
 </body>
 </html>
