--- a/dog.html
+++ b/dog.html
@@ -12,12 +12,12 @@
     <p>
         The dog or domestic dog, (Canis familiaris or Canis lupus familiaris) is a domesticated descendant of the wolf which is characterized by an upturning tail. The dog derived from an ancient, extinct wolf, and the modern grey wolf is the dog's nearest living relative. The dog was the first species to be domesticated, by hunter–gatherers over 15,000 years ago, before the development of agriculture. Due to their long association with humans, dogs have expanded to a large number of domestic individuals and gained the ability to thrive on a starch-rich diet that would be inadequate for other canids. Over the millennia, dogs became uniquely adapted to human behavior, and the human-canine bond has been a topic of frequent study. The dog has been selectively bred over millennia for various behaviors, sensory capabilities, and physical attributes. Dog breeds vary widely in shape, size, and color. They perform many roles for humans, such as hunting, herding, pulling loads, protection, assisting police and the military, companionship, therapy, and aiding disabled people. This influence on human society has given them the sobriquet of "man's best friend."
     </p>
-
+    <a href="index.html" class="btn btn-primary">Homepage</a>
     <h2>Some dog photos</h2>
     <img src="Huskiesatrest.jpg" alt="Huskie" width="500" height="333">
     <img src="Brooks_Chase_Ranger_of_Jolly_Dogs_Jack_Russell.jpg" alt="Jack Russel" width="500" height="333">
     <img src="Big_and_little_dog.jpg" alt="Big and little dogs" width="500" height="333">
     <img src="Dog_coat_variation.png" alt="Dog differences" width="500" height="333">
-    <a href="index.html" class="btn btn-primary">homepage</a>
+    
 </body>
 </html>
