--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>TheGreatSavage</title>
     
 </head>
 <body>
@@ -15,7 +15,10 @@
         Here we will put some animals that maybe you are intrested of:
     </p>
 
-    <h1><a href="dog.html"> Dogs </a></h1> <h1><a href="cat.html"> Cats </a></h1>
+    <h1><a href="dog.html"> Dogs </a></h1> 
+    <h1><a href="cat.html"> Cats </a></h1>
+    <h1><a href="rabbit.html">rabbit</a></h1>
     
+    <p><a href="dinosaur.html">The powerful Dinosaurs</a></h1></p>
 </body>
 </html>
