--- a/trex.html
+++ b/trex.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>T-rex</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>The Dinosaur King!</h1>
@@ -13,6 +14,6 @@
         Specimens of Tyrannosaurus rex include some that are nearly complete skeletons. Soft tissue and proteins have been reported in at least one of these specimens. The abundance of fossil material has allowed significant research into many aspects of its biology, including its life history and biomechanics. The feeding habits, physiology, and potential speed of Tyrannosaurus rex are a few subjects of debate. Its taxonomy is also controversial, as some scientists consider Tarbosaurus bataar from Asia to be a second Tyrannosaurus species, while others maintain Tarbosaurus is a separate genus. Several other genera of North American tyrannosaurids have also been synonymized with Tyrannosaurus.
         As the archetypal theropod, Tyrannosaurus has been one of the best-known dinosaurs since the early 20th century and has been featured in film, advertising, postal stamps, and many other media.</p>
         <h1><a href="trex.html">t-rex</a></h1>
-    <img src="Tyrannosaurus_Rex_Holotype.jpg" alt="t-rex" class="trex">
+    <img  src="Tyrannosaurus_Rex_Holotype.jpg" alt="t-rex" class="imgtrex">
 </body>
-</html>
+</html5>
