--- a/index.html
+++ b/index.html
@@ -3,22 +3,34 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>TheGreatSavage</title>
     
 </head>
 <body>
-    <h1 class="text-primary">TheGreatSavage</h1>
+    <h1 class="text-danger">TheGreatSavage</h1>
     <h1> The animals</h1>
     <p>
         Here we will put some animals that maybe you are intrested of:
     </p>
 
-    <h1><a href="dog.html"> Dogs </a></h1> 
-    <h1><a href="cat.html"> Cats </a></h1>
-    <h1><a href="rabbit.html">rabbit</a></h1>
-    
-    <p><a href="dinosaur.html">The powerful Dinosaurs</a></h1></p>
+    <div class="container">
+        <div class="row">
+            <div class="col">
+                <h1><a href="dog.html"> Dogs </a></h1>
+                <h1><a href="dinosaur.html">The powerful Dinosaurs</a></h1>
+            </div>
+            <div class="col">
+                <h1><a href="cat.html"> Cats </a></h1>
+                <h1><a href="fantasy.html"> The mythical animals </a></h1>
+            </div>
+            <div class="col">
+                <h1><a href="rabbit.html">Rabbit</a></h1>
+                <h1><a href="index.html">The everyday-life animals </a></h1>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
