--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <h1><a href="fantasy.html"> The mythical animals </a></h1>
             </div>
             <div class="col">
-                <h1><a href="rabbit.html">Rabbit</a></h1>
+                <h1><a href="rabbit.html">Rabbits</a></h1>
                 <h1><a href="index.html">The everyday-life animals </a></h1>
             </div>
         </div>
