it's about power

--- a/trex.html
+++ b/trex.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>T-rex</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="trex.css">
 </head>
 <body>
     <h1><p class="text-danger">The animals king:the T-rex</p></h1>
